syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "EmailProto";

package email;

service EmailService {
    rpc Check (HealthCheckRequest) returns (HealthCheckResponse);
    rpc EmailSend (EmailSendRequest) returns (Response);
    rpc VerifyEmailCode (VerifyEmailCodeRequest) returns (Response);
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
}

message EmailSendRequest {
    string email = 1;
}

message VerifyEmailCodeRequest {
    string email = 1;
    string code = 2;
}

message Response {
    string result = 1;
}
